# ZPressor

./: .gitignore  LICENSE  README.md  requirements.txt
depthsplat/: README.md  test.py  test_base.py  train.sh
depthsplat/assets/acid_evaluation/: acid_ctx_16v_tgt_8v_n200.json  acid_ctx_24v_tgt_8v_n200.json  acid_ctx_36v_tgt_8v_n200.json  acid_ctx_8v_tgt_8v_n200.json
depthsplat/assets/dl3dv_evaluation/: dl3dv_ctx_12v_tgt_8v_n50.json  dl3dv_ctx_16v_tgt_8v_n50.json  dl3dv_ctx_24v_tgt_8v_n50.json  dl3dv_ctx_36v_tgt_8v_n50.json
depthsplat/assets/re10k_evaluation/: re10k_ctx_12v_tgt_8v_n200.json  re10k_ctx_24v_tgt_8v_n200.json  re10k_ctx_36v_tgt_8v_n200.json  re10k_ctx_8v_tgt_8v_n200.json
depthsplat/config/: main.yaml
depthsplat/config/dataset/: dl3dv.yaml  re10k.yaml
depthsplat/config/experiment/: dl3dv.yaml  re10k.yaml
depthsplat/config/loss/: ib.yaml
depthsplat/src/: config.py  main.py
depthsplat/src/dataset/: __init__.py  dataset_dl3dv.py  dataset_re10k.py
depthsplat/src/loss/: __init__.py  loss.py  loss_ib.py  loss_lpips.py  loss_mse.py
depthsplat/src/misc/: LocalLogger.py  image_io.py  render_utils.py  resume_ckpt.py  stablize_camera.py
depthsplat/src/model/: model_wrapper.py  ply_export.py  types.py
depthsplat/src/scripts/: convert_dl3dv_test.py  convert_dl3dv_train.py  generate_dl3dv_index.py  generate_evaluation_index.py
depthsplat/src/visualization/: vis_depth.py
mvsplat/: README.md  test_acid.py  test_acid_base.py  test_re10k.py  test_re10k_base.py
mvsplat/assets/acid_evaluation/: acid_ctx_24v_tgt_8v_n200.json  acid_ctx_36v_tgt_8v_n200.json  acid_ctx_8v_tgt_8v_n200.json
mvsplat/config/: main.yaml
mvsplat/src/: main.py
pixelsplat/: README.md  test_re10k.py  test_re10k_base.py
pixelsplat/config/: main.yaml
pixelsplat/src/: config.py  main.py
zpressor/: __init__.py  attention.py  pyproject.toml  utils.py  zpressor.py
(+54 files in other folders)
